tests/ui/rfcs/rfc-2632-const-trait-impl/assoc-type-const-bound-usage-0.qualified.stderr
warning: the feature `effects` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/assoc-type-const-bound-usage-0.rs:6:30
   |
LL | #![feature(const_trait_impl, effects)]
   |                              ^^^^^^^
   |
   = note: see issue #102090 <https://github.com/rust-lang/rust/issues/102090> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/assoc-type-const-bound-usage-0.rs:21:6
   |
LL |     <T as /* FIXME: ~const */ Trait>::Assoc::func()
   |      ^ the trait `Trait` is not implemented for `T`
   |
help: consider further restricting this bound
   |
LL | const fn qualified<T: ~const Trait + Trait>() -> i32 {
   |                                    +++++++

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
